# entropy-app

./: Cargo.toml  cspell.json
benches/: block.rs  packet.rs
data/: plot.ipynb
data/saved/: latency-1726293920.csv  latency-1726294419.csv  latency-1726295746.csv  latency-1726567501.csv  latency-1726568723.csv  latency-1726572035.csv  latency-1726577512.csv  latency-1726623458.csv  latency-1726624782.csv  latency-1726638092.csv  latency-1726644099.csv  latency-1726646580.csv  tput-1726545678-sleep-10M.csv  tput-1726551541-sleep-10M.csv  tput-1726557962-sleep-10M.csv  tput-1726561181-sleep-10M.csv
examples/: app-standalone.rs  app_standalone.rs  bench_lifecycle.rs  broadcast.rs
src/: app.rs  block.rs  broadcast.rs  glacier.rs  lib.rs  main.rs  node.rs  redirect.rs  replication.rs  server.rs  store.rs
src/block/: distr.rs
src/glacier/: ring.rs
tools/control/: Cargo.toml
tools/control-spec/: Cargo.toml
tools/control-spec/src/: lib.rs
tools/control/src/: lib.rs  main.rs
tools/terraform/: .gitignore  main.tf
tools/terraform/group/: main.tf
tools/terraform/region/: main.tf
