[package]
name = "entropy-app"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "packet"
harness = false

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = "0.7.5"
bincode = "1.3.3"
bytes = { version = "1.7.1", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures = "0.3.30"
merkle = { version = "1.4.2", package = "rs_merkle" }
rand = "0.9.0-alpha"
rand_stable = { version = "0.8.5", package = "rand" }
reqwest = { version = "0.12.7", default-features = false, features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.40.0", features = ["fs", "macros", "net", "sync", "time"] }

[dev-dependencies]
criterion = "0.5.1"
