[package]
name = "control"
version = "0.1.0"
edition = "2021"
default-run = "control"

[dependencies]
anyhow = { version = "1.0.87", features = ["backtrace"] }
control-spec = { version = "0.1.0", path = "../control-spec" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "macros", "process", "rt"] }
